# zmq-communication

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  publish.cpp  publisher.cpp  publisher.h  subscribe.cpp  subscriber.cpp  subscriber.h
